Fix z-index for images

--- a/styles/touhou.css
+++ b/styles/touhou.css
@@ -347,6 +347,8 @@ body
 }
 .wrapper
 {
+	position: relative;
+	
     font-size: 20px;
 
     display: inline-block;
